--- a/monolithic/templates/base.html
+++ b/monolithic/templates/base.html
@@ -9,7 +9,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('home') }}">Bookstore</a>
+        <a class="navbar-brand" href="{{ url_for('home.index') }}">Bookstore</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
